add update and drop post
